--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,30 @@
+body{
+  width:100%;
+  background-color: cornsilk;
+}
 #logo{
   width: 100px;
   height: auto;
 }
-
 #menu_bar{
   display: flex;
   position: relative;
   left: 100px;
 }
 #menu_bar>div{
-  padding-left:30px;
+  padding-left:0px;
   padding-right: 30px;
   font-family: Arial, Helvetica, sans-serif;
   color: darkslategray;
+}
+a{
+  color: darkslategray;
+  text-decoration: none;
+  border-bottom: 3px solid;
+  border-radius: 5px;
+  border-bottom-color: darkslategray;
+}
+a:hover{
+  background-color: white;
+  color: orange;
 }
