--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,10 @@ a:hover{
 ol{
   display: flex;
   justify-content: space-around;
+  list-style-type: none;
+}
+ul{
+  list-style-type: none;
 }
 h1{
 color: brown;
